# xsimd

./: .gitignore  CMakeLists.txt  my_changes.patch
include/xsimd/arch/: xsimd_scalar.hpp
include/xsimd/arch/common/: xsimd_common_trigo.hpp
include/xsimd/math/: xsimd_rem_pio2.hpp
include/xsimd/types/: xsimd_api.hpp
test/: CMakeLists.txt  test_scalar_trigo.cpp  test_scalar_vs_vector.cpp  test_utils.hpp
test/gtest/: CMakeLists.txt  main.cpp  test_math_scalar_vs_vector.cpp  test_math_std_vs_xsimd.cpp  test_scalar_cmath.cpp
